--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,3 +15,5 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 URL: https://github.com/josephlewis/routepath
 BugReports: https://github.com/josephlewis/routepath/issues
+Suggests: 
+    testthat
