initial package functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,10 @@
 export(ABC_rejection)
 export(calculate_routepaths)
 export(extract_end_points)
+export(max_distance)
+import(abc)
 import(doParallel)
 import(foreach)
-import(iterators)
 import(leastcostpath)
 import(methods)
 import(parallel)
