--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,9 @@ Imports:
     parallel,
     doParallel,
     foreach,
-    leastcostpath,
+    rgeos,
     sp,
+    leastcostpath,
+    abc,
     iterators,
     methods
