--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R:
            role = c("aut", "cre"),
            email = "josephlewis1992@gmail.com",
            comment = c(ORCID = "0000-0002-0477-1756"))
-Description: What the package does (one paragraph).
+Description: Route Paths Rejection sampling scheme for ABC
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
