replace doParallel for doSNOW

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,11 +19,12 @@ Suggests:
     testthat
 Imports: 
     parallel,
-    doParallel,
+    doSNOW,
     foreach,
     rgeos,
     sp,
     leastcostpath,
     abc,
     iterators,
-    methods
+    methods,
+    utils
