--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R:
            role = c("aut", "cre"),
            email = "josephlewis1992@gmail.com",
            comment = c(ORCID = "0000-0002-0477-1756"))
-Description: Route Paths Rejection sampling scheme for ABC
+Description: routepath is a collection of functions designed for applying the Rejection sampling scheme for ABC to route paths
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
@@ -18,7 +18,7 @@ BugReports: https://github.com/josephlewis/routepath/issues
 Suggests: 
     testthat
 Imports: 
-    parallel,
+    snow,
     doSNOW,
     foreach,
     rgeos,
