reformatted ABC_rejection to rbind routepaths for each row rather than at end

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R:
            role = c("aut", "cre"),
            email = "josephlewis1992@gmail.com",
            comment = c(ORCID = "0000-0002-0477-1756"))
-Description: routepath is a collection of functions designed for applying the Rejection sampling scheme for ABC to route paths
+Description: routepath is a collection of functions designed for applying the Rejection sampling scheme for ABC to route paths. 
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
@@ -25,4 +25,9 @@ Imports:
     abc,
     iterators,
     methods,
-    utils
+    utils,
+    ggplot2,
+    gridExtra,
+    dplyr,
+    ggdendro,
+    sf
