--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(extract_parameters)
 export(plot_GoF)
 export(plot_similarity)
 export(pp_cf_check)
+export(sample_parameters)
 import(abc)
 import(doSNOW)
 import(dplyr)
