--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: routepath
 Title: Path Modelling
-Version: 0.0.0.9000
+Version: 0.1.0
 Authors@R: 
     person(given = "Joseph",
            family = "Lewis",
            role = c("aut", "cre"),
            email = "josephlewis1992@gmail.com",
            comment = c(ORCID = "0000-0002-0477-1756"))
-Description: routepath is a collection of functions designed for applying the Rejection sampling scheme for ABC to route paths. 
+Description: routepath is a collection of functions designed for applying Approximate Bayesian Computation to route paths. 
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
