--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,6 +22,9 @@ Imports:
     rgeos,
     sp,
     leastcostpath,
+    raster,
+    gdistance,
+    Matrix,
     abc,
     iterators,
     methods,
