--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,11 +2,19 @@
 
 export(ABC_rejection)
 export(create_route)
+export(global_wlc)
+export(local_weights_cs)
+export(local_wlc)
+export(rescale_cs_global)
+export(rescale_cs_local)
+import(Matrix)
 import(abc)
 import(doSNOW)
 import(foreach)
+import(gdistance)
 import(leastcostpath)
 import(methods)
+import(raster)
 import(rgeos)
 import(sf)
 import(snow)
