--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,18 +19,16 @@ Imports:
     snow,
     doSNOW,
     foreach,
-    rgeos,
-    sp,
-    leastcostpath,
-    raster,
-    gdistance,
     Matrix,
-    abc,
     iterators,
     methods,
-    utils,
     ggplot2,
     gridExtra,
     dplyr,
     ggdendro,
-    sf
+    sf,
+    rgeos,
+    sp,
+    leastcostpath,
+    raster,
+    gdistance
