--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,11 @@ export(local_weights_cs)
 export(local_wlc)
 export(rescale_cs_global)
 export(rescale_cs_local)
+export(route_hists)
+export(route_pairs)
+export(route_params)
+export(route_scatter)
+export(route_stats)
 import(doSNOW)
 import(foreach)
 import(leastcostpath)
