--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R:
            role = c("aut", "cre"),
            email = "josephlewis1992@gmail.com",
            comment = c(ORCID = "0000-0002-0477-1756"))
-Description: routepath is designed to infer the importance of factors influencing known routes.
+Description: routepath is designed to infer parameters influencing a route.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
@@ -22,6 +22,10 @@ Imports:
     Matrix,
     iterators,
     methods,
+    utils,
+    stats,
+    graphics,
+    grDevices,
     sf,
     rgeos,
     sp,
