fixed imports and exported change_tolerance

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(ABC_rejection)
 export(attach_parameters)
+export(change_tolerance)
 export(create_route)
 export(global_wlc)
 export(local_weights_cs)
@@ -13,8 +14,10 @@ export(route_pairs)
 export(route_params)
 export(route_scatter)
 export(route_stats)
+export(summarise_parameters)
 import(leastcostpath)
 import(methods)
 import(rgeos)
 import(sf)
 import(sp)
+importFrom(foreach,"%dopar%")
