--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,4 +17,4 @@ RoxygenNote: 7.2.1
 URL: https://github.com/josephlewis/routepath
 BugReports: https://github.com/josephlewis/routepath/issues
 Depends: R (>= 3.4.0)
-Imports: terra (>= 1.7-0), sf (>= 1.0-7), leastcostpath (>= 2.0.0), foreach (>= 1.5.2), parallel, doParallel, ggplot2, Matrix (>= 1.4-1)
+Imports: terra (>= 1.7-0), sf (>= 1.0-7), leastcostpath (>= 2.0.0), foreach (>= 1.5.2), parallel, doParallel, ggplot2, Matrix (>= 1.4-1), HDInterval
