--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,5 +3,8 @@
 S3method(print,routepath)
 export(ABC_rejection)
 export(global_wlc)
+export(local_weights_cs)
+export(local_wlc)
 export(rescale_cs_global)
+export(rescale_cs_local)
 importFrom(foreach,"%dopar%")
